--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="container">
       <div class="header-content">
-        <div class="logo">ELPHRODS</div>
+        <a href="index.html"><div class="logo">ELPHRODS</div></a>
         <ul class="nav-menu">
           <li><a href="#services">Services</a></li>
           <li><a href="#impact">Impact</a></li>
@@ -86,7 +86,7 @@
               <li>Covers tuition, infrastructure, and sanitation upgrades</li>
               <li>Low-interest rates, tailored repayment plans</li>
             </ul>
-            <a href="#apply" class="cta-button">Apply Now</a>
+            <a href="services/school-wash.html" class="cta-button">Learn More</a>
           </div>
         </div>
         <div class="service-card">
@@ -100,7 +100,7 @@
               <li>For plumbers, pit emptiers, and water service providers</li>
               <li>Quick approval, competitive rates</li>
             </ul>
-            <a href="#apply" class="cta-button">Apply Now</a>
+            <a href="services/business-wash.html" class="cta-button">Learn More</a>
           </div>
         </div>
         <div class="service-card">
@@ -115,7 +115,7 @@
               <li>Pit emptying and septic upgrades</li>
               <li>24-hour credit approval</li>
             </ul>
-            <a href="#apply" class="cta-button">Apply Now</a>
+            <a href="services/household-wash.html" class="cta-button">Learn More</a>
           </div>
         </div>
       </div>
@@ -143,6 +143,24 @@
       <div class="testimonials">
         <p class="testimonial-quote">"Thanks to Elphrods, our school upgraded its sanitation facilities, improving hygiene for 300+ students."</p>
         <p class="testimonial-author">— Jane M., School Principal</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- SDGs We Support Section -->
+  <section class="sdgs" id="sdgs">
+    <div class="container">
+      <h2 class="section-title">SDGs We Support</h2>
+      <div class="sdgs-list">
+        <div class="sdg-item">
+          <img src="images/sdgs/goal-6.png" alt="Clean Water and Sanitation (SDG 6)">
+          <p>Clean Water &amp; Sanitation (SDG 6)</p>
+        </div>
+        <div class="sdg-item">
+          <img src="images/sdgs/goal-1.png" alt="No Poverty (SDG 1)">
+          <p>No Poverty (SDG 1)</p>
+        </div>
+        <!-- Repeat `.sdg-item` blocks for each supported SDG -->
       </div>
     </div>
   </section>
@@ -198,7 +216,7 @@
               <span class="news-category">Market Insights</span>
               <span class="news-author">By Jane Smith</span>
             </div>
-            <a href="blog/posts/market-insights/kisumu-wash-market-opportunities-challenges-2025.md" class="read-more">Read More →</a>
+            <a href="blog/posts/market-insights/2025-04-19-kisumu-wash-market-opportunities-challenges-2025.html" class="read-more">Read More →</a>
           </div>
         </div>
         <div class="news-item">
@@ -210,7 +228,7 @@
               <span class="news-category">Success Stories</span>
               <span class="news-author">By John Doe</span>
             </div>
-            <a href="blog/posts/success-stories/elphrods-wash-financing-transforming-kisumu-schools.md" class="read-more">Read More →</a>
+            <a href="blog/posts/success-stories/2025-04-15-elphrods-wash-financing-transforming-kisumu-schools.html" class="read-more">Read More →</a>
           </div>
         </div>
       </div>
