--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="index.html"><div class="logo">ELPHRODS</div></a>
         <ul class="nav-menu">
           <li><a href="#services">Services</a></li>
-          <li><a href="#impact">Impact</a></li>
+          <li><a href="pages/impact.html">Impact</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#news">News</a></li>
           <li><a href="#contact">Contact</a></li>
