--- a/pages/impact.html
+++ b/pages/impact.html
@@ -557,15 +557,15 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <div class="logo">ELPHRODS</div>
+                <a href="../index.html"> <div class="logo">ELPHRODS</div> </a>
                 <ul class="nav-menu">
-                    <li><a href="index.html#services">Services</a></li>
+                    <li><a href="../index.html#services">Services</a></li>
                     <li><a href="impact.html">Impact</a></li>
-                    <li><a href="index.html#about">About Us</a></li>
-                    <li><a href="blog/index.html">News</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="../index.html#about">About Us</a></li>
+                    <li><a href="../blog/index.html">News</a></li>
+                    <li><a href="../index.html#contact">Contact</a></li>
                 </ul>
-                <a href="index.html#apply" class="cta-button">Apply for a Loan</a>
+                <a href="../index.html#apply" class="cta-button">Apply for a Loan</a>
             </div>
         </div>
     </header>
